# jetson-core-scheduler

./: CMakeLists.txt  LICENSE  README.md
examples/: demo.py
include/: cpu_utils.hpp  metrics.hpp  scheduler.hpp  task.hpp  task_registry.hpp  thread_pool.hpp
python/: bindings.cpp
src/: cpu_utils.cpp  main.cpp  metrics.cpp  scheduler.cpp  task.cpp  task_registry.cpp  thread_pool.cpp
test/: test_basic.cpp
